variables.Variables.scala.error
Compilation error:
Variables:2: error: not found: value isOverBaggel
while (isOverBaggel()==false){
       ^Variables:6: error: not found: value pickupBaggel
pickupBaggel()
^Variables:12: error: not found: value dropBaggel
dropBaggel() 
^