variables.Variables.scala.code
var c=0
while (isOverBaggel()==false){
  c=c+1
  forward()
}
pickupBaggel()
var k=0
while (k!=c){
  k=k+1
  backward()
}
dropBaggel()